--- a/README-UT20250423.md
+++ b/README-UT20250423.md
@@ -1,3 +1,4 @@
+こっちのREAD　MEが正だ！！もう一つは無視して、以下の通りやって。
 # Bedrock Chatbot with Cognito Authentication
 
 Amazon Bedrock を使用したチャットボットアプリケーションで、Amazon Cognito による認証機能を備えています
