--- a/README-UT20250423.md
+++ b/README-UT20250423.md
@@ -58,7 +58,8 @@ sudo npm install -g aws-cdk@latest
 
 ```bash
 cd /tmp/testdir/
-git clone https://github.com/keisskaws/simplechat.git
+git clone https://github.com/yassakamoto/simplechat.git
+#オリジナルから改変 git clone https://github.com/keisskaws/simplechat.git
 cd simplechat
 
 ```
